# ai-market-bubble

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-monitor.yml
config/: signals.json
data/: latest.json  score_history.json
docs/: data.json  index.html  sample-data.json  sample.html
src/: adoption.py  category_scoring.py  config.py  dashboard.py  discord_notify.py  filing_language.py  fundamentals.py  macro.py  market.py  run_daily.py  run_sample.py  sample_data.py  scoring.py
tests/: test_adoption.py  test_category_scoring.py  test_config.py  test_dashboard.py  test_discord_notify.py  test_filing_language.py  test_fundamentals.py  test_macro.py  test_market.py  test_sample_data.py  test_scoring.py
